# Module_VCL

./: README.md  pyproject.toml
templates/: main.vcl.j2
tests/: test_backends.py  test_caching.py  test_log_streaming.py  test_rate_limit.py  test_redirects.py  test_renderer.py  test_terraform_renderer.py  test_video_streaming.py
vcl_builder/: cli.py  renderer.py  terraform_renderer.py  wizard.py
vcl_builder/modules/: __init__.py  backends.py  base.py  caching.py  log_streaming.py  rate_limit.py  redirects.py  video_streaming.py
