[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vcl-builder"
version = "0.1.0"
description = "Interactive CLI wizard to generate Fastly-ready VCL configuration files"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "questionary>=2",
    "Jinja2>=3.1",
]

[project.scripts]
vcl-builder = "vcl_builder.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vcl_builder*"]

[tool.setuptools.package-data]
"*" = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
